--- a/css/style.css
+++ b/css/style.css
@@ -992,6 +992,23 @@ fieldset {
   background-color: #ffffff;
 }
 
+.popup--error{
+  position: absolute;
+  background: #eeeeee;
+  z-index: 10;
+  text-align: center;
+  border-radius: 25px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 60%;
+  padding: 20px;
+}
+
+.popup--hidden{
+  display: none;
+}
+
 .popup__avatar {
   position: absolute;
   bottom: 100%;
