--- a/css/style.css
+++ b/css/style.css
@@ -788,12 +788,16 @@ fieldset {
 .ad-form__photo {
   margin-right: 10px;
   margin-bottom: 10px;
+  flex-grow: 1;
 
-  width: 70px;
   height: 70px;
 
   background-color: #e4e4de;
   border-radius: 5px;
+}
+
+.ad-form__photo img{
+  margin-right: 10px;
 }
 
 .ad-form__element--submit {
